fixed loupe alignement #1249

--- a/assets/css/app.scss
+++ b/assets/css/app.scss
@@ -1114,6 +1114,7 @@ footer[role="tools"]{
         }
         fieldset.search{
           display: inline-flex;
+          align-items: center;
           >div{
             width:80%;
             vertical-align: middle;
